# Hazel

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.lua  GenerateProjects.bat  GenerateProjects_CMake.bat  GenerateProjects_Premake.bat  Hazel.sln  premake5.lua
Hazel/: Hazel.vcxproj  Hazel.vcxproj.filters  premake5.lua
Hazel-Editor/: imgui.ini  premake5.lua
Hazel-Editor/assets/scenes/: Example.hazel
Hazel-Editor/assets/shaders/: Texture.glsl
Hazel-Editor/src/: EditorLayer.cpp  EditorLayer.h  HazelEditorApp.cpp
Hazel-Editor/src/Panels/: ContentBrowserPanel.cpp  SceneHierarchyPanel.cpp
Hazel/src/: Hazel.h  Test.cpp  Test.h  hzpch.h
Hazel/src/Hazel/: Application.cpp  Application.h  Core.h  Layer.h  Log.cpp  Log.h
Hazel/src/Hazel/Core/: Application.cpp  Application.h  Assert.h  Base.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  Log.cpp  Log.h  PlatformDetection.h  Timestep.h  Window.h
Hazel/src/Hazel/Debug/: Instrumentor.h
Hazel/src/Hazel/Events/: ApplicationEvent.h  Event.h  MouseEvent.h
Hazel/src/Hazel/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Hazel/src/Hazel/Renderer/: Buffer.cpp  Buffer.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h
Hazel/src/Hazel/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneSerializer.cpp
Hazel/src/Hazel/Utils/: PlatformUtils.h
Hazel/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3_loader.h
Hazel/src/Platform/Windows/: WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Hazel/vendor-ex/GLFW/: CMakeLists.txt
Hazel/vendor-ex/Glad/include/glad/: glad.h
Hazel/vendor-ex/Glad/src/: glad.c
Hazel/vendor-ex/entt/include/: entt.hpp
Sandbox/: HazelProfile-Runtime.json  HazelProfile-Shutdown.json  HazelProfile-Startup.json  Sandbox.vcxproj  imgui.ini  premake5.lua
Sandbox/assets/shaders/: Texture.glsl
Sandbox/src/: Application.cpp  ParticleSystem.cpp  ParticleSystem.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
scripts/: SetupPremake.py  SetupVulkan.py  Utils.py  Win-GenerateProjects.bat
